<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_ratings">Sort By Ratings</string>
    <string name="sort_by_favourite">Sort By Favourite</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="release_date">Release Date</string>
    <string name="content_authority">movies.udacity.com.popularmovies.database</string>
    <string name="trailers">Trailers</string>
    <string name="trailer1">Trailer 1</string>
    <string name="trailer2">Trailer 2</string>
    <string name="reviews">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
