<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            tools:context="movies.udacity.com.popularmovies.MovieDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        >


        <ImageView
            android:id="@+id/imgmovie"
            android:layout_width="185dp"
            android:layout_height="278dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/activity_margin"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/txtmoviename"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imgmovie"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_material_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtreleasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imgmovie"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="69dp"
            android:layout_toEndOf="@+id/imgmovie"
            android:layout_toRightOf="@+id/imgmovie"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/txtratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtreleasedate"
            android:layout_alignStart="@+id/txtreleasedate"
            android:layout_below="@+id/txtreleasedate"
            android:layout_marginTop="41dp"
            android:text="7.7/10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"/>


        <TextView
            android:id="@+id/txtmoviedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtmoviename"
            android:layout_marginTop="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtreleasedate"
            android:layout_alignLeft="@+id/txtreleasedate"
            android:layout_alignStart="@+id/txtreleasedate"
            android:layout_marginBottom="@dimen/dimen_text_spacing"
            android:text="@string/release_date"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ImageView
            android:id="@+id/imglike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtratings"
            android:layout_alignStart="@+id/txtratings"
            android:layout_below="@+id/txtratings"
            android:layout_marginTop="46dp"
            android:background="@drawable/like"/>
        <!--   <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">-->
        <View
            android:id="@+id/viewStub"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txtmoviedetails"
            android:layout_marginTop="5dp"
            android:background="@color/primary_light"
            />

        <TextView
            android:id="@+id/txttrailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewStub"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/trailers"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <LinearLayout
            android:id="@+id/trailersone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txttrailers"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/trailer1"
                android:layout_width="@dimen/view_width"
                android:layout_height="@dimen/view_height"

                android:src="@drawable/play"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/view_height"
                android:gravity="center"
                android:text="@string/trailer1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trailerstwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/trailersone"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/trailer2"
                android:layout_width="@dimen/view_width"
                android:layout_height="@dimen/view_height"
                android:src="@drawable/play"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/view_height"
                android:gravity="center"
                android:text="@string/trailer2"
                />
        </LinearLayout>

        <View
            android:id="@+id/viewStub2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/trailerstwo"
            android:layout_marginTop="5dp"
            android:background="@color/primary_light"
            />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewStub2"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/reviews"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <LinearLayout
            android:id="@+id/reviewslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviews"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="vertical"
            >


        </LinearLayout>
    </RelativeLayout>


</ScrollView>










